<resources>
    <string name="app_name">Message in a Bottle</string>
    <string name="title_activity_message_detail">Message</string>
    <string name="message_detail_lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum tincidunt eget tellus sed commodo. Proin pellentesque ligula vitae nunc efficitur auctor. In iaculis mollis dui. Vivamus placerat at nisl sit amet fringilla. Curabitur sed tortor vel nibh feugiat gravida eget eget elit. Nunc suscipit tempus erat, viverra mattis odio vulputate quis. Fusce laoreet facilisis augue eu fermentum. Nulla mauris urna, eleifend vel vestibulum at, mollis ac leo. Mauris viverra, lectus ac dictum rhoncus, turpis arcu tincidunt nunc, sit amet porta risus est non ligula. Donec id est vel metus aliquam hendrerit quis eget felis. Mauris id gravida lacus. Nulla id ligula ante. Phasellus pulvinar vestibulum libero ac elementum. Vivamus non justo diam. Ut ullamcorper, augue sit amet ultricies ultrices, ligula ex mattis mauris, nec venenatis risus orci nec nulla. Aliquam id consequat arcu. Nulla facilisi. Donec quis suscipit nibh, eget pharetra eros. Ut nec aliquam sapien, quis ornare tortor. Curabitur ac orci a velit tincidunt efficitur ac ac dolor. Sed ultrices augue aliquet maximus auctor. Donec faucibus dui vel risus efficitur, quis maximus dui ullamcorper. Nulla a posuere orci. Vestibulum quis ante risus. Mauris bibendum pellentesque nisl, at ultrices ligula consequat in. Vivamus maximus metus id diam consectetur, et tristique nisi tempor. Nulla vel nulla justo. In porta eros diam, in suscipit leo luctus at. Proin tincidunt gravida elit, sed tristique nibh vulputate id. Aenean id cursus velit, ac feugiat massa. Cras non feugiat urna. Vivamus ac ornare ipsum. Integer cursus diam eget dolor varius, sit amet blandit urna tincidunt. Vestibulum eu imperdiet arcu. Integer mauris nunc, pharetra eu tincidunt a, pharetra sed elit. Vivamus accumsan pulvinar hendrerit. In sed quam purus. Suspendisse non consectetur leo, nec tristique nisi. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Donec eget tempor velit. Mauris lacinia suscipit justo, vitae aliquam turpis venenatis quis. Praesent dignissim odio odio, nec feugiat sem eleifend ac. Aliquam efficitur lacinia purus, egestas egestas quam aliquam nec. Ut gravida neque vitae congue hendrerit. Maecenas faucibus, tortor in dignissim pellentesque, dolor augue blandit nulla, non accumsan eros tellus eu dui. Morbi feugiat metus eget lacinia tempus. Etiam a nunc ut urna consectetur tincidunt. Ut volutpat, dui in dignissim varius, lectus nunc blandit ligula, non rutrum tellus tortor a est. Donec non tincidunt ligula. Sed feugiat id eros ac vulputate. Pellentesque sed mi lorem. Donec quis augue blandit, dictum purus ut, porttitor enim. Vivamus nisl dui, aliquet eget fermentum non, eleifend vitae urna. Aliquam vitae erat dolor. Nulla congue enim tempor libero volutpat interdum. Sed sit amet pulvinar ipsum. Sed id diam tortor. Pellentesque venenatis velit at nisi ultricies maximus. Fusce id ligula ut sem pharetra gravida. Aliquam faucibus convallis feugiat. Praesent nec quam neque. Sed a ex sit amet libero bibendum interdum. Donec ut vestibulum velit. Curabitur sit amet purus dapibus, sodales ligula tempus, ultricies turpis. Sed mattis quam vitae sodales efficitur. Aenean ut ipsum mollis nibh venenatis lobortis quis a augue. Donec at porta odio.</string>
    <string name="title_activity_map">MapActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">Sign in</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Login</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">The username or password is incorrect.</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="login">Login</string>
    <string name="logout">Logout</string>
    <string name="message_history">Message History</string>
    <string name="saved_messages">Saved Messages</string>
    <string name="about">About Us</string>
    <string name="date_created">Date Created:</string>
    <string name="date_saved">Date Saved:</string>
    <string name="toast_icon_description">Toast Icon</string>
    <string name="team_toast">Team Toast</string>
    <string name="semester_description">Spring Semester 2019</string>
    <string name="team_members">Charles Bailey (API/Backend)\nJasper Chong (API/Backend)\nNikolaus Dunn (API/Backend/Web)\nBradley Glaser (Mobile/Project Manager)\nDavid Harmeyer(Mobile)\nHeath Milligan (Web)\nSydney Munro (Backend/Web)\nJuan Parra (Web)\nSpencer Ross (Mobile)</string>
    <string name="title_activity_create_message">CreateMessageActivity</string>
    <string name="must_not_be_empty">Message must not be empty!</string>
    <string name="report_button">Report</string>
    <string name="report_confirmation">Report message?</string>
    <string name="cancel_button">Cancel</string>
    <string name="your_message_here">Your Message Here</string>
    <string name="create_account">Create Account</string>
    <string name="username_already_exists">Username already exists.</string>
</resources>
