<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/login"
            android:icon="@android:drawable/sym_def_app_icon"
            android:title="@string/login" />
        <item
            android:id="@+id/logout"
            android:icon="@android:drawable/sym_def_app_icon"
            android:title="@string/logout"
            android:visible="false" />
        <item
            android:id="@+id/history"
            android:icon="@android:drawable/ic_menu_recent_history"
            android:title="@string/message_history"
            android:visible="false" />
        <item
            android:id="@+id/saved"
            android:icon="@android:drawable/btn_star_big_off"
            android:title="@string/saved_messages" />
        <item
            android:id="@+id/about"
            android:icon="@android:drawable/ic_menu_info_details"
            android:title="@string/about" />
    </group>

</menu>
